Adding additional information to the commit code.

--- a/Day 1/HelloWorld.html
+++ b/Day 1/HelloWorld.html
@@ -3,14 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Introduction</title>
 </head>
 <body>
-    <p>Hello World</p>
-    <h1>My Name is Akshat Kumar</h1>
-    <h2>I work at Vensure Employer Solutions</h2>
-    <h4>I am a System Operations Intern</h4>
-    <p>My Departmen is Namely EDI</p>
-    <p>My Job is to monitor the EDI files and make sure they are processed correctly</p>
+    <h1>Introduction to HTML</h1>
+    <p>HTML stands for HyperText Markup Language. It is the standard language for creating web pages and web applications. HTML describes the structure of a web page using markup.</p>
+
+    <h2>HTML Elements & Tags</h2>
+    <p>HTML elements are the building blocks of HTML pages. They are represented by tags. Tags are enclosed in angle brackets, and most tags come in pairs: an opening tag and a closing tag.</p>
+
+    <h2>Paragraph Element</h2>
+    <p>The paragraph element is used to define a block of text. It is represented by the <code>&lt;p&gt;&lt;/p&gt;</code> tag. For example:</p>
+    <pre>&lt;p&gt;This is a paragraph.&lt;/p&gt;</pre>
+    <pre><code>&lt;p&gt;This is a paragraph.&lt;/p&gt;</code></pre>
+
+    <h2>Heading Element</h2>
+    <p>Heading elements are used to define headings in a document. There are six levels of headings, from <code>&lt;h1&gt;</code> to <code>&lt;h6&gt;</code>, with <code>&lt;h1&gt;</code> being the highest level and <code>&lt;h6&gt;</code> the lowest. For example:</p>
+    <pre><code>&lt;h1&gt;This is a heading&lt;/h1&gt;</code></pre>
+
+    <h2>Boilerplate Code</h2>
+        <p>Boilerplate code refers to the basic HTML structure that is required to start creating a web page. It includes the <code>&lt;!DOCTYPE html&gt;</code> declaration, the <code>&lt;html&gt;</code> element, the <code>&lt;head&gt;</code> element, and the <code>&lt;body&gt;</code> element. Here is an example of boilerplate code:</p>
+        <pre><code>&lt;!DOCTYPE html&gt;
+    &lt;html lang="en"&gt;
+    &lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+    &lt;title&gt;Document&lt;/title&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+    &lt;p&gt;Hello World&lt;/p&gt;
+    &lt;/body&gt;
+    &lt;/html&gt;</code></pre>
+
+    <h2>Learning HTML</h2>
+    <p>HTML is easy to learn and widely used for creating web pages.</p>
+
+    <h2>HTML Maintenance</h2>
+    <p>It is maintained by the World Wide Web Consortium (W3C).</p>
+
+    <h2>HTML5</h2>
+    <p>HTML5 is the latest version of HTML and includes new features and improvements.</p>
+
+    <h2>File Extensions</h2>
+    <p>HTML documents are saved with a .html or .htm file extension.</p>
+
+    <h2>Combining HTML with Other Technologies</h2>
+    <p>HTML can be combined with CSS and JavaScript to create dynamic and interactive web pages.</p>
 </body>
 </html>
